# Assignment5

./: CMakeLists.txt  MemorySlot.cpp  MemorySlot.h  Page.cpp  Page.h  PageCache.cpp  PageCache.h  PageMemory.cpp  PageMemory.h  PageMemorySlot.cpp  PageMemorySlot.h  Process.cpp  Process.h  Simulator.cpp  Simulator.h  Utils.cpp  Utils.h  assignment5Example  main.cpp
pageReplacementAlgorithms/: FIFOReplacement.cpp  FIFOReplacement.h  LeastRecentlyUsed.cpp  LeastRecentlyUsed.h  PageReplacementAlgorithm.cpp  PageReplacementAlgorithm.h  Paging.cpp  Paging.h  RandomReplacement.cpp  RandomReplacement.h
